chore: 完成 M1-4 阶段最终验收与文档更新
本次提交覆盖了 M1-4 阶段的全部核心功能验证与修复：
1. 修复真实模式路由逻辑：区分开发/真实模式会话跳转，避免模板ID冒充会话ID
2. 修复大整数ID精度问题：统一前后端ID为字符串传输，解决JS精度丢失
3. 完善RocketMQ可靠性：添加启动超时保护，失败场景返回明确错误码
4. 优化Redis准入控制：修复租约清理逻辑，补充异常捕获与错误转换
5. 补充全量测试用例：包含MQ幂等、并发准入、模型适配器契约验证
6. 完善异常处理：为Python Runtime添加未预期异常的失败事件上报
7. 更新全部文档与TODO清单，同步验收状态