@@ -4,6 +4,8 @@ import com.fasterxml.jackson.annotation.JsonProperty;
 import java.time.Instant;
 import java.util.Map;
 import java.util.Objects;
+import java.util.LinkedHashMap;
+import java.util.Collections;
 
 /** V1 Python -> Java RunEvent envelope 的不可变 Java 表示。 */
 public record V1RunEvent(
@@ -23,7 +25,9 @@ public record V1RunEvent(
         require(schemaVersion, "schemaVersion"); require(runId, "runId"); require(dispatchId, "dispatchId");
         require(eventId, "eventId"); require(requestId, "requestId"); require(traceId, "traceId");
         require(requestHash, "requestHash"); require(eventType, "eventType");
-        Objects.requireNonNull(occurredAt, "occurredAt"); payload = payload == null ? Map.of() : Map.copyOf(payload);
+        Objects.requireNonNull(occurredAt, "occurredAt");
+        // Usage events intentionally contain nullable provider/cost fields; Map.copyOf rejects them.
+        payload = payload == null ? Map.of() : Collections.unmodifiableMap(new LinkedHashMap<>(payload));
         if (!"v1".equals(schemaVersion)) throw new IllegalArgumentException("schemaVersion must be v1");
         if (attempt < 1 || eventSeq < 1) throw new IllegalArgumentException("attempt and eventSeq must be positive");
     }
